Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/SMAX_PS_Complaint__c.object-meta.xml
<CustomObject>
    <label>Complaint</label>
    <nameField>
        <displayFormat>CMP-{0000000000}</displayFormat>
        <label>Complaint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaints</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>