Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_Batch__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Batch__c</fullName>
    <description>Batch Number</description>
    <inlineHelpText>Batch Number</inlineHelpText>
    <label>Batch Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>