Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_CapaNumber__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_CapaNumber__c</fullName>
    <description>CAPA Number</description>
    <inlineHelpText>CAPA Number</inlineHelpText>
    <label>CAPA Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>