Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_ComplaintLongText__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ComplaintLongText__c</fullName>
    <description>Long Text</description>
    <inlineHelpText>Long Text</inlineHelpText>
    <label>Long Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>