Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_ComplaintNumber__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ComplaintNumber__c</fullName>
    <externalId>true</externalId>
    <label>Complaint Number</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>