Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_ComplaintOwner__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ComplaintOwner__c</fullName>
    <description>Complaint Owner</description>
    <inlineHelpText>Complaint Owner</inlineHelpText>
    <label>Complaint Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>