Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_ComplaintShortText__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ComplaintShortText__c</fullName>
    <description>Short Text</description>
    <inlineHelpText>Short Text</inlineHelpText>
    <label>Short Text</label>
    <length>40</length>
    <type>Text</type>
</CustomField>