Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_CompletedTxnNum__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_CompletedTxnNum__c</fullName>
    <description>Completed Transaction Number</description>
    <inlineHelpText>Completed Transaction Number</inlineHelpText>
    <label>Completed Transaction Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>