Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_ContractType__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ContractType__c</fullName>
    <description>Contract Type</description>
    <inlineHelpText>Contract Type</inlineHelpText>
    <label>Contract Type</label>
    <length>4</length>
    <type>Text</type>
</CustomField>