Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_CRM_ServiceOrderNum__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_CRM_ServiceOrderNum__c</fullName>
    <label>CRM Service Order Num</label>
    <length>25</length>
    <type>Text</type>
</CustomField>