Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_CustomerEmail__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_CustomerEmail__c</fullName>
    <description>Customer Email Address</description>
    <inlineHelpText>Customer Email Address</inlineHelpText>
    <label>Customer Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>