Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_CustomerName__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_CustomerName__c</fullName>
    <description>Customer Name</description>
    <inlineHelpText>Customer Name</inlineHelpText>
    <label>Customer Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>