Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_CustomerPhone__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_CustomerPhone__c</fullName>
    <description>Customer Phone Number</description>
    <inlineHelpText>Customer Phone Number</inlineHelpText>
    <label>Customer Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>