Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_F1CreationMethod__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_F1CreationMethod__c</fullName>
    <description>F1 Creation Method</description>
    <inlineHelpText>F1 Creation Method</inlineHelpText>
    <label>F1 Creation Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>