Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_LastChangedDate__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_LastChangedDate__c</fullName>
    <description>Last Changed Date</description>
    <inlineHelpText>Last Changed Date</inlineHelpText>
    <label>Last Changed Date</label>
    <type>DateTime</type>
</CustomField>