Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_LastChangedUsername__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_LastChangedUsername__c</fullName>
    <description>Last Changed By Username</description>
    <inlineHelpText>Last Changed By Username</inlineHelpText>
    <label>Last Changed By Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>