Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_LastTxnNum__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_LastTxnNum__c</fullName>
    <description>Last Transaction Number</description>
    <inlineHelpText>Last Transaction Number</inlineHelpText>
    <label>Last Transaction Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>