Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_ProductLine__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ProductLine__c</fullName>
    <description>Product Line</description>
    <inlineHelpText>Product Line</inlineHelpText>
    <label>Product Line</label>
    <length>25</length>
    <type>Text</type>
</CustomField>