Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_ServiceCreationDate__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ServiceCreationDate__c</fullName>
    <description>Service Created Date</description>
    <inlineHelpText>Service Created Date</inlineHelpText>
    <label>Service Creation Date</label>
    <type>DateTime</type>
</CustomField>