Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_ServiceOrderLastUpdated__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ServiceOrderLastUpdated__c</fullName>
    <description>Service Order Last Updated Date</description>
    <inlineHelpText>Service Order Last Updated Date</inlineHelpText>
    <label>Service Order Last Updated Date</label>
    <type>DateTime</type>
</CustomField>