Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_ShipToPartyName__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ShipToPartyName__c</fullName>
    <description>Ship To Party Name</description>
    <inlineHelpText>Ship To Party Name</inlineHelpText>
    <label>Ship To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>