Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_StatusCode__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_StatusCode__c</fullName>
    <label>Status Code</label>
    <length>14</length>
    <type>Text</type>
</CustomField>