Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/fields/SMAX_PS_StatusDescription__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_StatusDescription__c</fullName>
    <label>Status Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>