Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SMAX_PS_ComplaintNumber__c</columns>
    <columns>SMAX_PS_WorkOrder__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SMAX_PS_Account__c</columns>
    <columns>SMAX_PS_InstalledProduct__c</columns>
    <columns>Legacy_Record_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>